@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-08-17  Dirk Schulze  <dschulze@adobe.com>
+- Specify filter() image function and interpolation.
+
 2013-08-14  Dirk Schulze  <dschulze@adobe.com>
 - Clarify interpolation behavior more.
 
